# fintracker

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  fixes.md  plot_metrics.py
data/: index.css  index.html  index.js  indicators.html  ticker.css  ticker.html  trades.css  trades.html  trades.js
include/: api.h  backtest.h  calendar.h  candle.h  colors.h  config.h  format.h  html_template.h  html_template.hpp  indicators.h  message.h  notifier.h  portfolio.h  position_sizing.h  positions.h  prediction.h  raw_mode.h  replay.h  servers.h  signal.h  signals.h  support_resistance.h  tg_commands.h  times.h  trendlines.h
include/concurrency/: api.h  endpoints.h  message.h  signalfd.h  sleeper.h  thread_pool.h
include/core/: portfolio.h  positions.h  replay.h
include/ind/: backtest.h  calendar.h  candle.h  indicators.h  stop_loss.h  support_resistance.h  ticker.h  trendlines.h
include/mt/: api.h  message.h  sleeper.h  thread_pool.h
include/risk/: position_sizing.h  profit_target.h  risk.h  sizing.h  stop_loss.h  target.h  todo.md
include/sig/: combined_signal.h  filters.h  position_sizing.h  signal_types.h  signals.h
include/signals/: position_sizing.h  signals.h
include/util/: colors.h  config.h  format.h  gen_html_template.h  math.h  raw_mode.h  symbols.h  times.h
page/: package.json  server.js
page/css/: common.css  history.css  index.css  ticker.css  trades.css
page/js/: history.js  index.js  plot.js  ticker.js  trades.js
page/public/: trades.html
scripts/: clean_trades.py  embed_str.py  plot_metrics.py  plot_metrics_old.py  plotly_themes.py  start_tunnel.py
src/: api.cpp  backtest.cpp  calendar.cpp  config.cpp  format.cpp  get_calendar.cpp  indicators.cpp  main.cpp  notifier.cpp  plot.cpp  portfolio.cpp  position_sizing.cpp  positions.cpp  prediction.cpp  replay.cpp  signal.cpp  signal_funcs.cpp  signals.cpp  support_resistance.cpp  tg_commands.cpp  times.cpp  trendlines.cpp  webpage.cpp
src/concurrency/: cldf_endpoint.cpp  npm_endpoint.cpp  portfolio_endpoint.cpp  td_api.cpp  tg_endpoint.cpp
src/connections/: cldf_server.cpp  notifier.cpp  npm_server.cpp  portfolio_server.cpp  td_api.cpp  tg_server.cpp
src/core/: calendar.cpp  config.cpp  portfolio.cpp  positions.cpp  replay.cpp  serialization.cpp  symbols.cpp  td_api.cpp  tg_api.cpp
src/ind/: backtest.cpp  calendar.cpp  indicators.cpp  metrics.cpp  position_sizing.cpp  stop_loss.cpp  support_resistance.cpp  ticker.cpp  trendlines.cpp
src/indicators/: backtest.cpp  indicators.cpp  metrics.cpp  position_sizing.cpp  stop_loss.cpp  support_resistance.cpp  trendlines.cpp
src/mt/: cldf_endpoint.cpp  npm_endpoint.cpp  portfolio_endpoint.cpp  td_api.cpp  tg_endpoint.cpp
src/risk/: position_sizing.cpp  profit_target.cpp  risk.cpp  scaling_rule.cpp  sizing.cpp  stop_loss.cpp  target.cpp
src/sig/: combined_signals.cpp  confirmations.cpp  filters.cpp  forecast.cpp  hints.cpp  meta.cpp  position_sizing.cpp  reasons.cpp  signal_memory.cpp  signals.cpp  stop_hit.cpp
src/sig/filters/: evaluate_1d_trends.cpp  evaluate_1h_trends.cpp  evaluate_4h_trends.cpp  evaluate_timeframe_alignment.cpp  filters.cpp  filters_classify.cpp
src/sig/hints/: divergence.cpp  ema_converging.cpp  ema_diverging.cpp  ema_flattening.cpp  hints.cpp  macd_histogram_peaked.cpp  macd_rising.cpp  near_support_resistance.cpp  pullback.cpp  rsi_approaching_50.cpp  rsi_falling_from_overbought.cpp  trends.cpp
src/sig/reasons/: broke_resistance.cpp  broke_support.cpp  ema_crossdown.cpp  ema_crossover.cpp  macd_bearish_cross.cpp  macd_bullish_cross.cpp  pullback_bounce.cpp  reasons.cpp  rsi_crossover_50.cpp
src/signals/: confirmations.cpp  filters.cpp  forecast.cpp  hints.cpp  meta.cpp  reasons.cpp  signal_confirmations.cpp  signal_filters.cpp  signal_hints.cpp  signal_meta.cpp  signals.cpp  stop_hit.cpp
src/util/: color_of.cpp  format.cpp  symbols.cpp  tg_format.cpp  times.cpp
src/webpage/: history.cpp  html_formats.cpp  index.cpp  index.html  page.cpp  plot.cpp  positions.cpp  tickers.cpp
